# cbra-matrix

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  docker-compose.yml  requirements.txt  run.sh
analyzer/: analyzer.py  dot_product.py  graph.py  main.py
benchmarks/: benchmark_matrix.cpp
include/: barray.h  enums.h  matrix.h
src/: allocator.cpp  allocator.h  barray.cpp  enums.cpp  math_dis.cpp  math_dis.h  math_dispatcher.h  matrix.cpp
src/standard_kernal/: math.h  standard_allocator.cpp  standard_allocator.h
src/standard_kernel/: standard_allocator.cpp  standard_allocator.h  standard_math.cpp  standard_math.h
tests/: test_barray.cpp  test_enums.cpp  test_matrix.cpp
